# x12pp

./: Cargo.toml  README.md
man/: x12pp.1
src/: cli.yml  main.rs
